# pvC

./: CMakeLists.txt  README.md  main.cpp  render.cpp  render.h  tarkovread.cpp  tarkovread.h  test
common/: CMakeLists.txt
common/include/common/: ivshmem_com.h
common/src/: ivshmem_com.cpp
games/: CMakeLists.txt  Includes.cpp  Includes.h  game.h  reader.h
games/dayz/: Engine.h  README.md  dayzgame.h  dayzread.cpp  dayzread.h
games/rainbowSix/: rainbowgame.h  rainbowread.cpp  rainbowread.h
games/rust/: rustgame.h  rustread.cpp  rustread.h
games/tarkov/: tarkovread.cpp  tarkovread.h
games/tarkov/GameSpecific/Tarkov/: Tarkov.h  TarkovExfilPoint.h  TarkovFPSCamera.h  TarkovGameWorld.h  TarkovHandsController.h  TarkovLootItem.h  TarkovMovementContext.h  TarkovPlayer.h  TarkovPlayerHealth.h  TarkovPlayerInfo.h  TarkovPlayerProfile.h  TarkovSkeletonRoot.h  aimbot.h
games/tarkov/GameTypes/Unity/: FPSCamera.h  GameObject.h  GameObjectManager.h  GameWorld.h  UnityEngineString.h
ovCl/: IVSHMEM.cpp  IVSHMEM.h  README.md  debug.h  ivshmem-example.pro  ivshmem.vcxproj  ivshmem.vcxproj.filters  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ov.cpp  ov.h  ovCl.sln  waitevent.cpp  waitevent.h
tarkov/: Includes.cpp  Includes.h
tarkov/GameSpecific/Tarkov/: Tarkov.h  TarkovExfilPoint.h  TarkovFPSCamera.h  TarkovGameWorld.h  TarkovHandsController.h  TarkovHealthInfo.h  TarkovLootItem.h  TarkovPlayer.h  TarkovPlayerBody.h  TarkovPlayerBones.h  TarkovPlayerInfo.h  TarkovPlayerProfile.h  TarkovProceduralWeaponAnimation.h  TarkovSkeletonRoot.h  aimbot.h
tarkov/GameTypes/Unity/: BaseObject.h  FPSCamera.h  GameObjectManager.h  GameWorld.h
vmath/: CMakeLists.txt  Doxyfile  LICENSE  Makefile
vmath/doc/html/: annotated.html  class_aabb3-members.html  class_aabb3.html  class_matrix3-members.html  class_matrix3.html  class_matrix4-members.html  class_matrix4.html  class_quaternion-members.html  class_quaternion.html  class_vector2-members.html  class_vector2.html  class_vector3-members.html  class_vector3.html  class_vector3.js  class_vector4-members.html  class_vector4.html  class_vector4.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func.js  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_i.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  (+39 more)
vmath/doc/html/html/: annotated.html  annotated.js  annotated_dup.js  class_aabb3-members.html  class_aabb3.html  class_aabb3.js  class_matrix3-members.html  class_matrix3.html  class_matrix3.js  class_matrix4-members.html  class_matrix4.html  class_matrix4.js  class_quaternion-members.html  class_quaternion.html  class_quaternion.js  class_vector2-members.html  class_vector2.html  class_vector2.js  class_vector3-members.html  class_vector3.html  class_vector4-members.html  class_vector4.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_func.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_i.html  functions_func_l.html  (+42 more)
vmath/doc/html/html/search/: all_1.js  all_10.js  all_14.js  all_4.js  all_6.js  all_9.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  functions_0.js  functions_1.js  functions_11.js  functions_4.js  functions_7.js  functions_8.js  functions_9.js  functions_d.js  functions_f.js  pages_0.js  related_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_2.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_b.js  variables_d.js
vmath/doc/html/search/: all_0.js  all_12.js  all_3.js  all_7.js  all_8.js  all_b.js  all_e.js  defines_3.js  files_0.js  functions_10.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  typedefs_2.js  typedefs_3.js  variables_0.js  variables_3.js  variables_4.js  variables_5.js  variables_a.js  variables_c.js  variables_e.js
vmath/src/: vmath.cpp  vmath.h
vmath/tests/: Aabb3Test.cpp  Aabb3Test.h  ConvTest.cpp  ConvTest.h  Makefile  Matrix3fTest.cpp  Matrix3fTest.h  Matrix4fTest.cpp  Matrix4fTest.h  MinMaxTest.cpp  MinMaxTest.h  QuatTest.cpp  QuatTest.h  Vector2fTest.cpp  Vector2fTest.h  Vector3fTest.cpp  Vector3fTest.h  testCommon.h  testMain.cpp
vmread/: mem.c
vmread/hlapi/: hlapi.h
